<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculo_de_imc"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/introduce_tu_peso_en_kg"
        android:text=""
        android:id="@+id/editPeso"
        android:inputType="numberDecimal"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/introduce_tu_altura_en_m"
        android:text=""
        android:id="@+id/editAltura"
        android:inputType="numberDecimal"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPeso" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grupoRadio"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editAltura"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            android:id="@+id/radioMasculino"
            android:layout_marginEnd="6dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino"
            android:id="@+id/radioFemenino"
            android:layout_marginStart="6dp"/>


    </RadioGroup>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular_imc"
        android:id="@+id/botonCalcular"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@id/editAltura"
        app:layout_constraintStart_toStartOf="@id/editAltura"
        app:layout_constraintTop_toBottomOf="@id/grupoRadio"
        android:orientation="horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>